# Juego-Othello

./: README.md
cliente/: package.json
cliente/src/: App.css  App.tsx
servidor/: CHANGELOG.md  Dockerfile  LICENSE  render.yaml  servidor.cabal
servidor/app/: AI.hs  Board.hs  Game.hs  Main.hs  Types.hs  Utils.hs
servidor/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
