cabal-version:      3.0

name:               servidor
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             ErikGuerrero1
maintainer:         gune030312@gs.utm.mx
category:           Game
build-type:         Simple
extra-doc-files:    CHANGELOG.md

executable servidor
  main-is:           Main.hs
  build-depends:     base >= 4.17.2.1 && < 5, scotty, aeson, text, wai >= 3.2, wai-cors >= 0.2
  hs-source-dirs:    app  
  ghc-options:       -Wall
  default-language:   Haskell2010
